<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/configure_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AFBEC0"
    tools:context=".ConfigurationFragment"
    tools:layout_editor_absoluteY="15dp">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/new_question_editText"
        android:layout_width="401dp"
        android:layout_height="41dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="201dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/new_question_editText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/save_new_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/option_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="240dp"
        android:gravity="center"
        android:hint="@string/option_one"
        app:layout_constraintBottom_toTopOf="@+id/save_new_question"
        app:layout_constraintEnd_toStartOf="@+id/option_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_question_editText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/option_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="240dp"
        android:gravity="center"
        android:hint="@string/option_two"
        app:layout_constraintBottom_toTopOf="@+id/save_new_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/option_one"
        app:layout_constraintTop_toBottomOf="@+id/new_question_editText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/save_new_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save_new_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>