<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8BCCA"
    tools:context=".ResultsFragment">


    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="175dp"
        android:text="RESET"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yes_count_view" />

    <TextView
        android:id="@+id/no_count_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_count_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yes_count_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yes_count_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_count_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/no_count_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/optionOneTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_button"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/yes_count_view"
        app:layout_constraintEnd_toStartOf="@+id/optionTwoTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".70" />

    <TextView
        android:id="@+id/optionTwoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_button"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/no_count_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/optionOneTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".70" />

</androidx.constraintlayout.widget.ConstraintLayout>