<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AFCED1"
    tools:context=".SurveyFragment">

    <Button
        android:id="@+id/yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/yes_button"
        app:layout_constraintEnd_toStartOf="@+id/no_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/survey_question_textView" />

    <Button
        android:id="@+id/no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/no_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yes_button"
        app:layout_constraintTop_toBottomOf="@+id/survey_question_textView" />

    <TextView
        android:id="@+id/survey_question_textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/survey_question_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newQuestionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prefer a new question?"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yes_button"
        app:layout_constraintVertical_bias=".80" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".50"
        app:layout_constraintStart_toEndOf="@+id/newQuestionTV"
        app:layout_constraintTop_toBottomOf="@+id/no_button"
        app:layout_constraintVertical_bias="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>